{
  "version": 4,
  "terraform_version": "0.12.1",
  "serial": 561,
  "lineage": "820184df-dc92-1416-d25e-84ff6f26170a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "load_balancer_private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:135928476890:loadbalancer/Team1-private-terraform-elb",
            "availability_zones": [
              "eu-west-1a"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "dns_name": "Team1-private-terraform-elb-1765859254.eu-west-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:8000/",
                "timeout": 20,
                "unhealthy_threshold": 2
              }
            ],
            "id": "Team1-private-terraform-elb",
            "idle_timeout": 400,
            "instances": [
              "i-023e8ea452896d902"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 8000,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "Team1-private-terraform-elb",
            "security_groups": [
              "sg-0e21f0b936419f0d7"
            ],
            "source_security_group": "135928476890/default",
            "source_security_group_id": "sg-0e21f0b936419f0d7",
            "subnets": [
              "subnet-0692f1d7a077a6402"
            ],
            "tags": {
              "Name": "Team1-private-terraform-elb"
            },
            "zone_id": "Z32O12XQLNTSW2"
          },
          "depends_on": [
            "aws_instance.app_instance_private",
            "aws_subnet.public-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "public_load_balancer",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:135928476890:loadbalancer/Team1-public-terraform-elb",
            "availability_zones": [
              "eu-west-1a"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "dns_name": "Team1-public-terraform-elb-1740215220.eu-west-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:8000/",
                "timeout": 20,
                "unhealthy_threshold": 2
              }
            ],
            "id": "Team1-public-terraform-elb",
            "idle_timeout": 400,
            "instances": [
              "i-0fc5e292b2d8fa387"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 8000,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "Team1-public-terraform-elb",
            "security_groups": [
              "sg-0e21f0b936419f0d7"
            ],
            "source_security_group": "135928476890/default",
            "source_security_group_id": "sg-0e21f0b936419f0d7",
            "subnets": [
              "subnet-0692f1d7a077a6402"
            ],
            "tags": {
              "Name": "Team1-public-terraform-elb"
            },
            "zone_id": "Z32O12XQLNTSW2"
          },
          "depends_on": [
            "aws_instance.app_instance_public",
            "aws_subnet.public-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_instance_private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09dc8417351e5cc57",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-023e8ea452896d902",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-023e8ea452896d902",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraformkirt",
            "monitoring": false,
            "primary_network_interface_id": "eni-0e5f64409beb8e413",
            "private_dns": "ip-10-120-123-155.eu-west-1.compute.internal",
            "private_ip": "10.120.123.155",
            "public_dns": "ec2-34-247-252-55.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.247.252.55",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-0d76f51f511ce7c97",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-002d36abd6a74d1d1",
            "tags": {
              "Name": "Team1-private-app"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a1a5d87de2617983"
            ]
          },
          "depends_on": [
            "aws_key_pair.kirtpair",
            "aws_security_group.sg_web_private",
            "aws_subnet.private-subnet",
            "data.template_file.private_app_init"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_instance_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-074844b6a187fa712",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-0fc5e292b2d8fa387",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0fc5e292b2d8fa387",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraformkirt",
            "monitoring": false,
            "primary_network_interface_id": "eni-0f9dc8e88d8ff8dab",
            "private_dns": "ip-10-120-122-216.eu-west-1.compute.internal",
            "private_ip": "10.120.122.216",
            "public_dns": "ec2-34-245-5-77.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.245.5.77",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-0bfd9bbe7ba766248",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0692f1d7a077a6402",
            "tags": {
              "Name": "Team1-public-app"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00570d92d24fb7d05"
            ]
          },
          "depends_on": [
            "aws_key_pair.kirtpair",
            "aws_security_group.sg_web_public",
            "aws_subnet.public-subnet",
            "data.template_file.public_app_init"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-015d2cf832a9f609c",
            "owner_id": "135928476890",
            "tags": {
              "Name": "Team1-internet-gateway"
            },
            "vpc_id": "vpc-0dd99a2b4a0266ff4"
          },
          "depends_on": [
            "aws_vpc.kirts_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web-private-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b86eb936ab48123f",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-015d2cf832a9f609c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Team1-private-route-table"
            },
            "vpc_id": "vpc-0dd99a2b4a0266ff4"
          },
          "depends_on": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.kirts_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web-public-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-03979c2aac50dca3b",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-015d2cf832a9f609c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Team1-public-route-table"
            },
            "vpc_id": "vpc-0dd99a2b4a0266ff4"
          },
          "depends_on": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.kirts_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web-private-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c0325d0087a9f6fa",
            "route_table_id": "rtb-0b86eb936ab48123f",
            "subnet_id": "subnet-002d36abd6a74d1d1"
          },
          "depends_on": [
            "aws_route_table.web-private-rt",
            "aws_subnet.private-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web-public-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-069ceb97fd6739171",
            "route_table_id": "rtb-03979c2aac50dca3b",
            "subnet_id": "subnet-0692f1d7a077a6402"
          },
          "depends_on": [
            "aws_route_table.web-public-rt",
            "aws_subnet.public-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_web_private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-0a1a5d87de2617983",
            "description": "Allow incoming HTTP connections \u0026 SSH access",
            "egress": [],
            "id": "sg-0a1a5d87de2617983",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.120.122.0/24"
                ],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              },
              {
                "cidr_blocks": [
                  "212.161.55.68/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "vpc_kirtpri_web",
            "name_prefix": null,
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Team1-security-group-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd99a2b4a0266ff4"
          },
          "depends_on": [
            "aws_vpc.kirts_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_web_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-00570d92d24fb7d05",
            "description": "Allow incoming HTTP connections \u0026 SSH access",
            "egress": [],
            "id": "sg-00570d92d24fb7d05",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "212.161.55.68/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "vpc_kirtpub_web",
            "name_prefix": null,
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Team1-security-group-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd99a2b4a0266ff4"
          },
          "depends_on": [
            "aws_vpc.kirts_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-002d36abd6a74d1d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.120.123.0/24",
            "id": "subnet-002d36abd6a74d1d1",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "Name": "Team1-private-subnet"
            },
            "vpc_id": "vpc-0dd99a2b4a0266ff4"
          },
          "depends_on": [
            "aws_vpc.kirts_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-0692f1d7a077a6402",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.120.122.0/24",
            "id": "subnet-0692f1d7a077a6402",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "Name": "Team1-public-subnet"
            },
            "vpc_id": "vpc-0dd99a2b4a0266ff4"
          },
          "depends_on": [
            "aws_vpc.kirts_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "kirts_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:vpc/vpc-0dd99a2b4a0266ff4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.120.0.0/16",
            "default_network_acl_id": "acl-0beeddf7e2c7f2434",
            "default_route_table_id": "rtb-05cd0338ef732c347",
            "default_security_group_id": "sg-0e21f0b936419f0d7",
            "dhcp_options_id": "dopt-18d5d77d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0dd99a2b4a0266ff4",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05cd0338ef732c347",
            "owner_id": "135928476890",
            "tags": {
              "Name": "Team1-vpc"
            }
          }
        }
      ]
    }
  ]
}